Fix career alignment

--- a/web/themes/custom/wvuonline2018/components/_patterns/02-molecules/menus/inline-menu/_inline-menu.scss
+++ b/web/themes/custom/wvuonline2018/components/_patterns/02-molecules/menus/inline-menu/_inline-menu.scss
@@ -31,7 +31,7 @@
     .menu__cta-buttons__link {
       color: $white;
       display: block;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       line-height: 1.5;
       padding: $space;
       text-decoration: none;
