--- a/web/themes/custom/wvuonline2018/components/_patterns/03-organisms/careers/_careers.scss
+++ b/web/themes/custom/wvuonline2018/components/_patterns/03-organisms/careers/_careers.scss
@@ -27,6 +27,7 @@
 
     @media (max-width: ($small)) {
       grid-template-columns: 1fr;
+      text-align: left;
     }
   }
 
