--- a/web/themes/custom/wvuonline2018/components/_patterns/03-organisms/hero/_hero.scss
+++ b/web/themes/custom/wvuonline2018/components/_patterns/03-organisms/hero/_hero.scss
@@ -107,7 +107,7 @@
     height: 100%;
     width: 100%;
     top: 0;
-    background: linear-gradient(
+    backgrounda: linear-gradient(
                     to right,
                     rgba(44, 42, 41, 0.4) 40%,
                     rgba(44, 42, 41, 0.2) 60%,
